web/style/transvision.css
/* ... */
#root input[type='submit'] {
    margin-top: 0;
    min-width: 100px;
    vertical-align: middle;
}

.button,
input[type='submit'] {
    display: inline-block;
    border-radius: 6px;
    transition: all linear 0.25s;
    text-align: center;
    line-height: 1.1;
    min-width: 80px;
    padding: 9px 30px;
    background: #0095dd;
    color: #fff;
    font-size: 14px;
    border: none;
    cursor: pointer;
    text-transform: uppercase;
}

.button:hover,
.button:focus,
input[type='submit']:hover,
input[type='submit']:focus {
    text-decoration: none;
    background: #18a4e9;
    color: #fff;
}

.button.action {
    border-radius: 3px;
    min-width: 50px;
    padding: 5px 10px;
    background: #f7f7f7;
    color: #333;
    font-size: 13px;
    text-transform: none;
}

.button.action:hover,
.button.action:focus {
    background: #fff;
}

fieldset {
    border: none;
    display: inline-block;
    min-height: 3em;
    margin: 0.5em 0 0;
}


input[type=checkbox] {
    display: none;
}

input[type="checkbox"] + label:before {
    content: "";
    display: inline-block;
    cursor: pointer;
    width: 13px;
    height: 13px;
    border-radius: 2px;
    border: 1px solid #c1c1c1;
    margin: -2px 7px 0 0;
    background-color: #f1f1f1;
    background-image: linear-gradient(#fff, rgba(255, 255, 255, 0.8));
    background-position: center center;
    background-repeat: no-repeat;
    box-shadow: 0 0 1px 0 rgb(255, 255, 255), inset 0 1px 0 0 rgba(0, 0, 0, 0.03);
    vertical-align: middle;
}

input[type="checkbox"]:not(:disabled) + label:hover::before {
    border-color: #0095dd;
}

input[type="checkbox"]:checked + label:before {
    background-image: url(/img/check.svg#check), linear-gradient(#fff, rgba(255, 255, 255, 0.8));
}

input[type="checkbox"]:disabled + label:before {
    opacity: 0.5;
    cursor: default;
}

input[type="checkbox"]:disabled + label {
    opacity: 0.8;
}

.select-style {
    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='50px' height='50px'><polyline points='46.139,15.518 25.166,36.49 4.193,15.519'/></svg>");
    background-position: center right 10px;
    background-size: 16px 16px;
    background-repeat: no-repeat;
    background-color: #fff;
    border-color: #b2b2b2;
    border-radius: 3px;
    border-style: solid;
    border-width: 1px;
    min-width: 110px;
    box-shadow: 0 1px rgba(255, 255, 255, 0.5);
}

.select-style select {
    padding: 5px 30px 5px 8px;
    display: block;
    min-width: 110px;
    width: 100%;
    font-size: 1em;
    border: none;
    box-shadow: none;
    background-color: transparent;
    -webkit-appearance: none;
       -moz-appearance: none;
            appearance: none;
}

.select-style select:focus {
    outline: none;
}

#main_search select {
    display: block;
    font-size: 0.8em;
}

#main_search #search_type {
    display: block;
}

#main_search #search {
    margin: 0;
}

#main_search #search input[type='text'] {
    background: #fff;
    border-color: #b2b2b2;
    border-style: solid;
    border-width: 1px;
    font-size: 13px;
    padding: 6px 10px;
    border-radius: 3px;
    box-shadow: 0 1px rgba(255, 255, 255, 0.5);
    transition: all linear .1s;
    line-height: 1.7;
    width: calc(80% - 20px);
    padding-right: 20px;
    vertical-align: middle;
}


#main_search #search input[type='text']:focus {
    border-color: #42a4e0;
    box-shadow: 0 0 0 2px rgba(73, 173, 227, 0.4);
    transition: all linear .1s;
}

#main_search #searchcontext {
    font-size: 0.9em;
    margin: 2px 0 0 0;
    padding-left: 9px;
}

#main_search #searchcontext span {
    font-weight: bold;
}

#main_search fieldset {
    margin-bottom: 0.5em;
    vertical-align: middle;
    min-height: 5em;
}

#main_search fieldset > label {
    line-height: 1.9;
    font-weight: bold;
}

#main_search fieldset .mainsearch_default_checkbox {
    float: left;
    margin: 0.45em 0.3em 0 0;
}

#main_search fieldset .default_option {
    float: left;
    font-size: 0.75em;
    padding-top: 0.2em;
}

#main_search fieldset#locale_switch {
    margin: 4px 0;
    padding: 2.5em 0;
    min-height: 18px;
    min-width: 18px;
    cursor: pointer;
    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path style="fill: rgb(51,51,51)" d="M6.99 11L3 15l3.99 4v-3H14v-2H6.99v-3zM21 9l-3.99-4v3H10v2h7.01v3L21 9z"/></svg>') center no-repeat transparent;
    fill: #fff;
}

#search_field_container {
    position: relative;
    display: inline;
}

#clear_search {
    position: absolute;
    top: 0;
    right: 0;
    width: 40px;
    height: 22px;
    cursor: pointer;
}

#clear_search:before {
    content: "×";
    font-family: 'Fira Sans UltraLight', Arial, sans-serif;
    font-size: 2.5em;
    line-height: 0.5em;
}

#advanced_search {
    width: 230px;
    text-align: left;
}

#advanced_search span > label {
    font-size: 0.9em;
}

#advanced_search span {
    white-space: nowrap;
    font-size: 1em;
    display: block;
    float: left;
    width: 115px;
    position: relative;
}

#simplesearchform {
    display: block;
    margin: 10px auto;
    text-align: center;
}

#simplesearchform #locale_select {
    width: 80px;
}

#simplesearchform #product_select {
    width: 150px;
}

#advanced_search span > label:hover + .search_tooltip {
    display: block;
    white-space: normal;
    font-size: 0.9em;
    top: 25px;
    left: -80px;
    width: 200px;
    padding: 0.5em;
    text-align: center;
    color: #fff;
    border-radius: 4px;
    background-color: #0095dd;
    transition: all linear .1s;
    opacity: 0.85;
}

.search_tooltip {
    display: none;
    position: absolute;
    z-index: 2;
}

/* Autocomplete styles for suggestion popup */
.autocomplete-suggestions {
    border: 1px solid #999;
    background-color: #fff;
    overflow: auto;
}

.autocomplete-suggestion {
    padding: 2px 5px;
    white-space: nowrap;
    overflow: hidden;
}
/* ... */

